import datetime
import pytz


class Event:
    start = ""
    end = ""
    summary = ""
    location = ""
    kind = ""

    def __init__(self):
        pass

    
    def display() -> str:
        pass

    