from services import Services
from event import Event

event = Event()
class Shower (Services):
    
    events = [""]
    blocks = [""]

    def __init__(self):
        pass

    def render (self):
        pass

    def display_events(self):
        event.display()

    def dispaly_blocks():
        pass

