class Block:
    name = ""
    latitude = ""
    longitude = ""
    description = ""
    pictures = [""]

    def dispaly()->str:
        pass
    
    def get_location()->list:
        pass
