from services import Services

class Map(Services):
    blocks = [""]

    def __init__(self):
        pass
    
    def get_user_location(self):
        pass

    def get_blocks(self):
        pass
